add new api CataloguesController and remove old models